--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@vercel/blob": "^0.15.1",
     "framer-motion": "^10.16.5",
+    "jest": "^29.7.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
