--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,10 @@
 root: true
 
-parser: "@typescript-eslint/parser"
-
 plugins:
-  - "@typescript-eslint"
   - jest
 
 extends:
+  - next/core-web-vitals
   - eslint:recommended
-  - plugin:@typescript-eslint/recommended
-  - plugin:react/recommended
-  - plugin:react-hooks/recommended
   - plugin:jest/recommended
   - prettier
