--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
