--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+version: "3.8"
 services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile
     ports:
       - "12000:3000"
     volumes:
